@@ -23,6 +23,10 @@
  * $max_date_formatted: The maximum date for this calendar in the format YYYY-MM-DD HH:MM:SS.
  * 
  */
+$axis = array();
+foreach ($day_names as $key => $value) {
+  $axis[$key] = $value['axis'];
+}
 //dsm('Display: '. $display_type .': '. $min_date_formatted .' to '. $max_date_formatted);
 ?>
 
@@ -34,7 +38,7 @@
     <tr>
       <th class="calendar-agenda-hour">&nbsp;</th>
       <?php foreach ($day_names as $cell): ?>
-        <th class="<?php print $cell['class']; ?>">
+        <th class="<?php print $cell['class']; ?>" axis="<?php print $cell['axis']; ?>">
           <?php print $cell['data']; ?>
         </th>
       <?php endforeach; ?>
@@ -168,11 +172,11 @@
         <tr>
           <?php for ($index = 0; $index < 8; $index++): ?>
           <?php if ($index == 0 ): ?>
-          <td class="first">
+          <td class="first" axis="<?php print $axis[$index]; ?>">
           <?php elseif ($index == 7 ) : ?>
-          <td class="last">
+          <td class="last"">
           <?php else : ?>
-          <td>
+          <td axis="<?php print $axis[$index]; ?>">
           <?php endif; ?>
             <?php foreach ($start_times as $time_cnt => $start_time): ?>
               <?php 
